<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_clock"
        android:icon="@drawable/ic_clock"
        android:title="@string/tab_clock" />
    <item
        android:id="@+id/nav_world"
        android:icon="@drawable/ic_world"
        android:title="@string/tab_world" />
    <item
        android:id="@+id/nav_alarm"
        android:icon="@drawable/ic_alarm"
        android:title="@string/tab_alarm" />
    <item
        android:id="@+id/nav_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/tab_timer" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_more"
        android:title="@string/tab_more" />
</menu>
